--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,23 +4,12 @@ version = "0.1.0"
 description = "A repository that demostrates an efficient and reproducible workflow for data projects."
 readme = "README.md"
 authors = [{ name = "Bushra Elmusharaf",email = "bushra.elmusharaf@gmail.com" }]
-readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "pandas (>=2.3.3,<3.0.0)",
-    "numpy (>=2.3.5,<3.0.0)"
+    "pandas>=2.3.3,<3.0.0",
+    "numpy>=2.3.5,<3.0.0"
 ]
-license = { text = "Apache 2.0" }
-
-[project.scripts]
-repro-script = "repro.script:main"
+license = { text = "Apache-2.0" }
 
 [project.urls]
 Repository = "https://github.com/BushraElmu/reproducible_workflow"
-
-[build-system]
-requires = ["setuptools>=61"]
-build-backend = "setuptools.build_meta"
-
-[tool.setuptools.packages.find]
-where = ["src"]
